force-app/main/default/objects/Product_Subscription__c/Product_Subscription__c.object-meta.xml
<CustomObject>
    <description>Ubiquity product and subscription information</description>
    <label>Product/Subscription</label>
    <nameField>
        <label>Product/Subscription Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Products/Subscriptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>