force-app/main/default/objects/Product_Subscription__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account Subscription is associated with.</description>
    <inlineHelpText>Account Subscription is associated with.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Subscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>