force-app/main/default/objects/Product_Subscription__c/fields/Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date__c</fullName>
    <description>Date Subscription became effective</description>
    <inlineHelpText>Date Subscription became effective</inlineHelpText>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>