force-app/main/default/objects/Product_Subscription__c/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Invoices</description>
    <inlineHelpText>Invoices</inlineHelpText>
    <label>Invoice</label>
    <referenceTo>Invoice__c</referenceTo>
    <relationshipLabel>Products/Subscriptions</relationshipLabel>
    <relationshipName>Products_Subscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>