force-app/main/default/objects/Product_Subscription__c/fields/Next_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Payment_Date__c</fullName>
    <description>Date Subscription payment will next be invoiced</description>
    <inlineHelpText>Date Subscription payment will next be invoiced</inlineHelpText>
    <label>Next Payment Date</label>
    <type>Date</type>
</CustomField>