force-app/main/default/objects/Product_Subscription__c/fields/Plan__c.field-meta.xml
<CustomField>
    <fullName>Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Plan that the Subscription is related to</description>
    <inlineHelpText>Plan that the Subscription is related to</inlineHelpText>
    <label>Plan</label>
    <referenceTo>Plan__c</referenceTo>
    <relationshipName>Subscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>