force-app/main/default/objects/Product_Subscription__c/fields/Price_Book__c.field-meta.xml
<CustomField>
    <fullName>Price_Book__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Price Book</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Products/Subscriptions</relationshipLabel>
    <relationshipName>Products_Subscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>