force-app/main/default/objects/Product_Subscription__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Products/Subscriptions</relationshipLabel>
    <relationshipName>Products_Subscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>