force-app/main/default/objects/Product_Subscription__c/fields/Product_Fee_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Fee_Type__c</fullName>
    <description>What fee structure does this product have?</description>
    <inlineHelpText>What fee structure does this product have?</inlineHelpText>
    <label>Product Fee Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Recurring</fullName>
            </value>
            <value>
                <fullName>One-Time</fullName>
            </value>
            <value>
                <fullName>Setup</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>